<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgColor"
        tools:context=".RegisterScreen">

        <View
            android:id="@+id/ellipse_1"
            android:layout_width="600dp"
            android:layout_height="600dp"
            android:background="@drawable/ellipse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="-350dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/commissioner_semibold"
            android:id="@+id/create_your_account"
            android:text="Create your Account"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent" />

      <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:elevation="400dp"
        app:cardCornerRadius="20dp"
          app:layout_constraintBottom_toBottomOf="parent"
          android:layout_marginBottom="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_your_account">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/constraintLayout"
        android:layout_height="match_parent"
        android:background="@drawable/rectangle"
        android:padding="20dp">

        <TextView
            android:id="@+id/nameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/commissioner_semibold"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/commissioner"
            android:hint="Full Name"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="#586B76"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTv"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/collegeIdTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/commissioner_semibold"
            android:text="@string/college_email_id"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameEt" />

        <EditText
            android:id="@+id/collegeIdEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/commissioner"
            android:hint="College Email ID"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="#586B76"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/collegeIdTv"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/yearTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/commissioner_semibold"
            android:text="@string/year"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/collegeIdEt" />

        <EditText
            android:id="@+id/yearIdEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/commissioner"
            android:hint="Year"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="#586B76"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yearTv"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
        android:id="@+id/branchTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/commissioner_semibold"
        android:text="@string/branch"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yearIdEt" />

        <EditText
            android:id="@+id/branchEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/commissioner"
            android:hint="Branch"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="#586B76"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/branchTv"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
        android:id="@+id/firstDomainTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/commissioner_semibold"
        android:text="@string/first_domain"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/branchEt" />

        <EditText
            android:id="@+id/firstDomainEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/commissioner"
            android:hint="First Domain"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="#586B76"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstDomainTv"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
        android:id="@+id/secondDomainTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/commissioner_semibold"
        android:text="Second Domain (optional)"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstDomainEt" />

        <EditText
            android:id="@+id/secondDomainEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/commissioner"
            android:hint="Second Domain"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="#586B76"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondDomainTv"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
        android:id="@+id/thirdDomainTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/commissioner_semibold"
        android:text="Third Domainn (optional)"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondDomainEt" />

        <EditText
            android:id="@+id/thirdDomainEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/commissioner"
            android:hint="Third Domain"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="#586B76"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thirdDomainTv"
            tools:ignore="TouchTargetSizeCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>